- pts-core: Ensure rename-identifier-in-result-file opens the proper HTML web-browser
- pts-core: Ensure remove-from-result-file opens the proper HTML web-browser
- pts-core: Reworked handling of browser launching in batch mode
- pts-core: Launch the web browser to display results when using internal-run mode
- phodevi: Add Haswell BMI2 detection

Phoronix Test Suite 4.6.0-Utsira

- phodevi: Report CPU scaling driver along side the CPU scaling governor

Phoronix Test Suite 4.6 Milestone 2
16 May 2013

- pts-core: Support compiler masking on short binaries
- pts-core: More advanced detection of compiler flags within the compiler masking process
- pts-core: DragonFlyBSD external dependency packaging updates
- pts-core: Various fixes
- phodevi: Fix for cpu.freq sensor reading on Apple OS X

Phoronix Test Suite 4.6 Milestone 1
11 April 2013

- pts-core: Official support for Facebook's HipHop HHVM PHP
- pts-core: Introduce new pts_define interface
- pts-core: Add debug-self-test option for running a self-hosting PHP/PTS performance test
- pts-core: Support PHP 5.4's cli_set_process_title() function
- pts-core: For now don't use PHP CURL on HipHop HHVM due to issues
- pts-core: Ubuntu 13.04's sudo seems to have problems with the external dependency handling
- pts-core: Add internal-run command for running benchmarks in semi-automated manner and without uploading data to OpenBenchmarking.org
- phodevi: Fix for memory reporting on OS X
- phodevi: Improved LLVM Clang compiler version detection with modern Apple Xcode
- phodevi: Improved Intel Linux GPU overclocking frequency detection
- phodevi: Fix for detecting new (319.xx) NVIDIA Linux driver X.Org driver

Phoronix Test Suite 4.4.1-Forsand
14 March 2013

- pts-core: Add the arm-linux-gnueabihf library directory for PTS External Dependency checks
- pts-core: Add SKIP_ALL_TEST_SUPPORT_CHECKS environment variable
- pts-core: Fix screen resolution listening when the resolution fails to be detected through Phodevi