@@ -16,6 +16,7 @@
 <li>Daniel D&iacute;az</li>
 <li>Daniel Stodden / Citrix</li>
 <li>Dean Hilkewich</li>
+<li>ESET s.r.o.</li>
 <li>Fatima Sheremetyeva</li>
 <li>Fujitsu</li>
 <li>Hans Ulrich Niedermann</li>
